--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -16,7 +16,6 @@ nav a{
     margin-right: 10px;
     padding: 5px;
 }
-
-.nav a:hover{
-    background-color: gray;
+nav a:hover{
+    background-color:lightgray;
 }
